[package]
name = "libldac"
version = "0.1.0"
description = "Safe bindings to libldac encoder"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories = [
    "external-ffi-bindings",
    "multimedia::encoding",
    "multimedia::audio",
]

[dependencies]
ldacbt-enc-sys = { version = "0.1.0", path = "../ldacbt-enc-sys" }
thiserror = "1.0.50"
